# collection_data_points

./: check_error.py  check_max_student.py  error_sbd.txt  fetch.py  main.py  max_student.py  pyproject.toml  run_scripts.sh  utils.py
main/: main1.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py
output/: 1_output.csv
