[tool.poetry]
name = "collection-data-points"
version = "0.1.0"
description = ""
authors = ["Athlthieu17 <hieult.hust170703@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
aiosonic = "^0.18.0"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
